# lturtle

./: CMakeLists.txt  README.md  recompile_all.sh  sample.lturtle
auxiliary/: hash.py  main.cpp
doc/: TKOM0_TomaszNowak.tex  TKOM_TomaszNowak.tex  gramatyka_po_faktoryzacji.txt  parser_grammar.txt
hashtest/: CMakeLists.txt  main.cpp
include/: exception.h  lexer.h  source.h  token.h
include/exception/: exception.h
include/lexer/: lexer.h  source.h  token.h
include/parser/: parser.h  syntax_tree.h
include/semantics/: code_analyzer.h  drawing_context.h  drawing_helpers.h  interpreter.h  turtle_operation.h  turtle_state.h  variable.h
main/: main.cpp
src/: exception.cpp  exception.h  lexer.cpp  main.cpp  source.cpp  token.cpp
src/exception/: exception.cpp
src/lexer/: lexer.cpp  source.cpp  token.cpp
src/main/: main.cpp
src/parser/: parser.cpp  syntax_tree.cpp
src/semantics/: code_analyzer.cpp  drawing_context.cpp  drawing_helpers.cpp  interpreter.cpp  turtle_operation.cpp  turtle_state.cpp  variable.cpp
src/tests/: test_lexer.cpp  test_parser.cpp  test_semantics.cpp
test_code/: ERROR_recursion  binary_tree  error_number_end.lturtle  example_tokens.lturtle  fractal_plant  keywords.lturtle  literals_and_numbers.lturtle  sierpinski  square
test_code/parser_and_lexer/: error_number_start.lturtle  keywords.lturtle  literals_and_numbers.lturtle
tests/: test_lexer.cpp
