cmake_minimum_required(VERSION 2.9)
project(lturtle)
FILE(GLOB_RECURSE SOURCES "src/*")
FILE(GLOB_RECURSE HEADERS "include/*")
include_directories("include")
set(DEFAULT_FLAGS "-Wall -pedantic -Wextra")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} ${DEFAULT_FLAGS} -O0 -g")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${DEFAULT_FLAGS} -O3")
add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS})
